<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/TextAngka"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textAlignment="textEnd"
        android:layout_above="@+id/TextHasil"/>

    <TextView
        android:id="@+id/TextHasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:layout_margin="16dp"
        android:textSize="64sp"
        android:textColor="@color/white"
        android:textAlignment="textEnd"
        android:layout_above="@+id/buttonLayout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:padding="16dp"
        android:id="@+id/buttonLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/buttonC"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="@android:color/darker_gray"
                android:layout_margin="12dp"
                android:text="@string/c"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/black"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/buttonPersen"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="@android:color/darker_gray"
                android:layout_margin="12dp"
                android:text="@string/persen"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/black"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/buttonDel"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="@android:color/darker_gray"
                android:layout_margin="12dp"
                android:text="@string/del"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/black"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/buttonBagi"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="#FFA41F"
                android:layout_margin="12dp"
                android:text="@string/bagi"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="30sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/no7"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="#3c3c3c"
                android:layout_margin="12dp"
                android:text="@string/_7"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/no8"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="#3C3C3C"
                android:layout_margin="12dp"
                android:text="@string/_8"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/no9"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="#3c3c3c"
                android:layout_margin="12dp"
                android:text="@string/_9"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/buttonKali"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="#FFA41F"
                android:layout_margin="12dp"
                android:text="@string/x"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/no4"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="#3c3c3c"
                android:layout_margin="12dp"
                android:text="@string/_4"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/no5"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="#3C3C3C"
                android:layout_margin="12dp"
                android:text="@string/_5"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/no6"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="#3c3c3c"
                android:layout_margin="12dp"
                android:text="@string/_6"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/buttonKurang"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="#FFA41F"
                android:layout_margin="12dp"
                android:text="@string/min"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="30sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/no1"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="#3c3c3c"
                android:layout_margin="12dp"
                android:text="@string/_1"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/no2"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="#3C3C3C"
                android:layout_margin="12dp"
                android:text="@string/_2"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/no3"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="#3c3c3c"
                android:layout_margin="12dp"
                android:text="@string/_3"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/buttonTambah"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="#FFA41F"
                android:layout_margin="12dp"
                android:text="@string/tambah"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="30sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">


            <Button
                android:id="@+id/no0"
                android:layout_width="165dp"
                android:layout_height="72dp"
                android:backgroundTint="#3C3C3C"
                android:layout_margin="12dp"
                android:text="@string/_0"
                android:textAlignment="viewStart"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/buttonTitik"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="#3c3c3c"
                android:layout_margin="12dp"
                android:text="@string/koma"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/buttonHasil"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:backgroundTint="#FFA41F"
                android:layout_margin="12dp"
                android:text="@string/samadenga"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:textSize="30sp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>